[package]
name = "png-container"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inflate = { version = "0.4.5", features = ["unstable"] }
num_enum = "0.7.0"
chrono = { version = "0.4.24", features = [ "std" ] }
uom = { version = "0.35.0", features = [ "autoconvert" ] }
