[package]
name = "png-container"
version = "0.1.0"
edition = "2024"
license = "LGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.7.5"
chrono = { version = "0.4.42", features = [ "std" ] }
uom = { version = "0.37.0", features = ["autoconvert"] }
flate2 = "1.1.5"
